Added social buttons

--- a/services.html
+++ b/services.html
@@ -27,13 +27,13 @@
 
     </header>
 
-    <main>
+    <main id="services">
 
         <h2>Selbst gehostete Dienste</h2>
 
         <p>Die folgende Dienste hoste ich primär zur eigenen Verwendung. Daher wird keine Garantie für die Verfügbarkeit oder Funktionalität dieser Dienste gegeben.</p>
 
-        <div class="services">
+        <div>
 
             <a href="https://iam.myfdweb.de/realms/MyFDWeb/account">
                 <img src="assets/img/keycloak.svg" alt="Keycloak">
