--- a/index.html
+++ b/index.html
@@ -14,18 +14,29 @@
 
 <body>
 
-    <header>
+    <main id="social">
 
-        <div id="logo">
-            <img class="primary" src="assets/img/logo.png" alt="Logo">
-            <a class="secondary" href="https://myfdweb.de/"><img src="https://myfdweb.de/logo.png" alt="MyFDWeb Logo"></a>
+        <div>
+
+            <div id="logo">
+                <img class="primary" src="assets/img/logo.png" alt="Logo">
+                <a class="secondary" href="https://myfdweb.de/"><img src="https://myfdweb.de/logo.png" alt="MyFDWeb Logo"></a>
+            </div>
+
+            <a href="https://github.com/FDHoho007"><img src="assets/icons/github.svg"></a>
+            <a href="https://steamcommunity.com/id/fdhoho007/"><img src="assets/icons/steam.svg"></a>
+            <a href="https://discord.com/users/272045141685043212"><img src="assets/icons/discord.svg"></a>
+            <a href="mailto:contact@fdhoho007.de"><img src="assets/icons/envelope-fill.svg"></a>
+            <a href="https://twitch.com/FDHoho007"><img src="assets/icons/twitch.svg"></a>
+            <a href="https://www.youtube.com/channel/UCA07UFyCw6uxf-pM5V7OuUQ"><img src="assets/icons/youtube.svg"></a>
+
         </div>
 
         <h1>FDHoho007</h1>
 
         <p>Developer and Gamer</p>
 
-    </header>
+    </main>
 
 </body>
 
